feat(creating environtment and creating authentication fiture)

--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -9,7 +9,7 @@
         "outputs": [
           "{options.outputPath}"
         ],
-        "defaultConfiguration": "production",
+        "defaultConfiguration": "development",
         "options": {
           "platform": "node",
           "outputPath": "apps/auth-service/dist",
