--- a/apps/auth-service/tsconfig.app.json
+++ b/apps/auth-service/tsconfig.app.json
@@ -3,14 +3,14 @@
   "compilerOptions": {
     "outDir": "dist",
     "types": ["node"],
-    "rootDir": "src",
+    "rootDir": "../../",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../packages/**/**.ts"],
   "exclude": [
     "out-tsc",
     "dist",
-    "jest.config.ts",
+    "jest.config.cts",
     "jest.config.cts",
     "src/**/*.spec.ts",
     "src/**/*.test.ts",
