--- a/apps/auth-service/tsconfig.spec.json
+++ b/apps/auth-service/tsconfig.spec.json
@@ -4,13 +4,7 @@
     "outDir": "./out-tsc/jest",
     "types": ["jest", "node"]
   },
-  "include": [
-    "jest.config.ts",
-    "jest.config.cts",
-    "src/**/*.test.ts",
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ],
+  "include": ["src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"],
   "references": [
     {
       "path": "./tsconfig.app.json"
