--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "@saas-ecommerce/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "dev": "npx nx run-many --target=serve --all"
+  },
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.21.2"
+    "@prisma/client": "6.19",
+    "axios": "^1.13.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-http-proxy": "^2.1.2",
+    "express-rate-limit": "^8.2.1",
+    "ioredis": "^5.8.2",
+    "morgan": "^1.10.1",
+    "nodemailer": "^7.0.12",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -22,17 +36,27 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/express-http-proxy": "^1.6.7",
     "@types/jest": "^30.0.0",
-    "@types/node": "20.19.9",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^20.19.9",
+    "@types/nodemailer": "^7.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "i": "^0.3.7",
     "jest": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
+    "npm": "^11.7.0",
     "nx": "22.3.3",
     "prettier": "~3.6.2",
+    "prisma": "6.19",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
